tests/config/it_should_err_on_unknown_keys.toml.stderr
Error: TOML parse error at line 1, column 1
  |
1 | __unknown_key__ = true
  | ^^^^^^^^^^^^^^^
unknown field `__unknown_key__`, expected one of `run`, `mode`, `openai`, `prefix`, `tmux`, `workdir`

